[gd_scene load_steps=2 format=3 uid="uid://d3x5b8wvg2q"]

[ext_resource type="Script" path="res://run_system/ui/map_scene.gd" id="1_bc123"]

[node name="MapScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bc123")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.062745, 0.082352, 0.117647, 1)

[node name="TopBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="HealthLabel" type="Label" parent="TopBar/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 32
text = "HP: 50/50"

[node name="GoldLabel" type="Label" parent="TopBar/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 32
text = "Gold: 0"

[node name="CoreLabel" type="Label" parent="TopBar/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 32
text = "Core: 0"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="FloorLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Floor: 1"
horizontal_alignment = 1

[node name="BattleButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 40
text = "GOTO BATTLE"
